<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterSuccessActivity">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_centerInParent="true"
    android:layout_height="wrap_content">
    <ImageView

        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="visible"
        android:layout_centerHorizontal="true"

        app:srcCompat="@drawable/animated_check" />

    <TextView
        android:id="@+id/tv_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_success"
        android:layout_below="@+id/imageView"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_marginTop="25dp"

        />

    <TextView
        android:id="@+id/tv_small_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_other_room"
        android:layout_below="@+id/tv_success"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_marginTop="15dp"

        />


    <Button
        android:id="@+id/btn_register_next"
        android:layout_below="@+id/tv_small_text"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundedbutton"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="20dp"
        android:text="@string/register_again"/>

</RelativeLayout>

</RelativeLayout>