<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/card_profile"
        android:layout_width="match_parent"
        android:layout_height="200dp"


        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3"


            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1.5"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/rnbgo_partner_avatar"


                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">
            <TextView
                android:id="@+id/welcome"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="35sp"
                android:textColor="@color/cardview_dark_background"
                />


                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_below="@id/welcome"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:layout_centerInParent="true"/>
                </LinearLayout>

            </RelativeLayout>




        </LinearLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card_register_room"
        android:layout_width="match_parent"
        android:layout_below="@id/card_profile"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_home" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/register_room"

                    android:textColor="@android:color/black"
                    android:textSize="20dp" />

            </RelativeLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_rooms"
        android:layout_width="match_parent"
        android:layout_below="@id/card_register_room"
        android:layout_height="100dp"
        android:layout_margin="20dp"

        app:cardCornerRadius="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:layout_gravity="center"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/listed_room"

                    android:textColor="@android:color/black"
                    android:textSize="25dp" />

            </RelativeLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card_view_registred"
        android:layout_width="match_parent"
        android:layout_below="@id/card_register_room"
        android:layout_height="100dp"
        android:layout_margin="20dp"

        app:cardCornerRadius="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/ic_art_track"
                android:layout_gravity="center"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/listed_room"

                    android:textColor="@android:color/black"
                    android:textSize="20dp" />

            </RelativeLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card_logout"
        android:layout_width="match_parent"
        android:layout_below="@id/card_view_registred"
        android:layout_height="100dp"
        android:layout_margin="20dp"


        app:cardCornerRadius="5dp">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/ic_person"
                android:layout_gravity="center"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/logout"

                    android:textColor="@android:color/black"
                    android:textSize="20dp" />

            </RelativeLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>









</RelativeLayout>